[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/battle/combat/turnQueue/TurnQueue.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/battle/combat/CombatArena.gd" type="Script" id=2]
[ext_resource path="res://src/battle/combat/interface/ActionMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/interface/run.png" type="Texture" id=4]

[node name="CombatArena" type="Node2D"]
script = ExtResource( 2 )

[node name="Positions" type="Node2D" parent="."]

[node name="Enemy" type="Node2D" parent="Positions"]

[node name="1" type="Position2D" parent="Positions/Enemy"]
position = Vector2( 280, 349 )

[node name="2" type="Position2D" parent="Positions/Enemy"]
position = Vector2( 180, 269 )

[node name="3" type="Position2D" parent="Positions/Enemy"]
position = Vector2( 120, 409 )

[node name="Party" type="Node2D" parent="Positions"]

[node name="1" type="Position2D" parent="Positions/Party"]
position = Vector2( 488, 349 )

[node name="2" type="Position2D" parent="Positions/Party"]
position = Vector2( 588, 269 )

[node name="3" type="Position2D" parent="Positions/Party"]
position = Vector2( 648, 409 )

[node name="TurnQueue" parent="." instance=ExtResource( 1 )]

[node name="Interface" type="CanvasLayer" parent="."]

[node name="ActionMenu" parent="Interface" instance=ExtResource( 3 )]
margin_top = 455.0
margin_bottom = -22.0

[node name="BarPositions" type="Node2D" parent="Interface"]
position = Vector2( 373, 451 )

[node name="Bar1" type="Position2D" parent="Interface/BarPositions"]

[node name="Bar2" type="Position2D" parent="Interface/BarPositions"]
position = Vector2( 0, 41 )

[node name="Bar3" type="Position2D" parent="Interface/BarPositions"]
position = Vector2( 0, 82 )

[node name="Run" type="TextureButton" parent="Interface"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Interface/Run" to="." method="_on_run_clicked"]
